crates/djls-semantic/src/snapshots/djls_semantic__tests__snapshot_mixed_diagnostics.snap
---
source: crates/djls-semantic/src/lib.rs
expression: rendered
---
Source
test.html
   1 | {% if and x %}oops{% endif %}
   2 | {{ name|title:"arg" }}
   3 | {{ text|truncatewords }}
   4 | {% trans "hello" %}
   5 |

Diagnostics (4)
1. ExpressionSyntaxError: Not expecting 'and' in this position in if tag.
    --> test.html:1:1
    tag: if
   1 | {% if and x %}oops{% endif %}
     | ^^^^^^^^^^^^^^

2. FilterUnexpectedArgument: Filter 'title' does not accept an argument
    --> test.html:2:9
   2 | {{ name|title:"arg" }}
     |         ^^^^^^^^^^^

3. FilterMissingArgument: Filter 'truncatewords' requires an argument
    --> test.html:3:9
   3 | {{ text|truncatewords }}
     |         ^^^^^^^^^^^^^

4. UnloadedTag: Tag 'trans' requires {% load i18n %}
    --> test.html:4:1
   4 | {% trans "hello" %}
     | ^^^^^^^^^^^^^^^^^^^
